Check author names and captical letters in titles ref list

--- a/book.bib
+++ b/book.bib
@@ -227,7 +227,7 @@
 }
 
 @Article{Conner2012a,
-  author        = {Tamlin S. Conner and Lisa Feldman Barrett},
+  author        = {Conner, Tamlin S.  and Feldman Barrett, Lisa},
   title         = {Trends in ambulatory self-report: The role of momentary experience in psychosomatic medicine},
   journal       = {Psychosomatic Medicine},
   year          = {2012},
@@ -242,7 +242,7 @@
 }
 
 @InCollection{Conner2012b,
-  author    = {Tamlin S. Conner and Barbara J. Lehman},
+  author    = {Conner, Tamlin S.  and  Lehman, Barbara J.},
   title     = {Getting started: Launching a study in daily life.},
   booktitle = {Handbook of research methods for studying daily life.},
   publisher = {Guilford Press},
@@ -338,7 +338,7 @@
 
 @Article{EbnerPriemer2009,
   author   = {Ebner-Priemer, Ulrich W. and Trull, Timothy J.},
-  title    = {{Ecological momentary assessment of mood disorders and mood dysregulation.}},
+  title    = {{Ecological momentary assessment of mood disorders and mood dysregulation}},
   journal  = {Psychological Assessment},
   year     = {2009},
   volume   = {21},
@@ -392,7 +392,7 @@
 
 
 @article{Emerencia2016,
-  author = {Emerencia, Ando Celino and {Van Der Krieke}, Lian and Bos, Elisabeth H. and {De Jonge}, Peter and Petkov, Nicolai and Aiello, Marco},
+  author = {Emerencia, Ando Celino and Van Der Krieke, Lian and Bos, Elisabeth H. and De Jonge, Peter and Petkov, Nicolai and Aiello, Marco},
   doi = {10.1109/JBHI.2015.2402280},
   isbn = {2168-2194 VO - 20},
   issn = {21682194},
@@ -425,7 +425,7 @@
 
 @article{Epskamp2012,
   title = {qgraph: Network visualizations of relationships in psychometric data},
-  author = {Sacha Epskamp and Ang\'elique O. J. Cramer and Lourens J. Waldorp and Verena D. Schmittmann and Denny Borsboom},
+  author = {Epskamp, Sacha  and Cramer, Ang\'elique O. J.  and Waldorp, Lourens J.  and Schmittmann,Verena D.  and Borsboom, Denny },
   journal = {Journal of Statistical Software},
   volume = {48},
   number = {4},
@@ -487,7 +487,7 @@
 
 @article{epskamp2018d,
   title={Personalized network modeling in psychopathology: The importance of contemporaneous and temporal connections},
-  author={Epskamp, Sacha and van Borkulo, Claudia D and van der Veen, Date C and Servaas, Michelle N and Isvoranu, Adela-Maria and Riese, Harri{\"e}tte and Cramer, Ang{\'e}lique OJ},
+  author={Epskamp, Sacha and van Borkulo, Claudia D and van der Veen, Date C and Servaas, Michelle N and Isvoranu, Adela-Maria and Riese, Harri{\"e}tte and Cramer, Ang{\'e}lique O J},
   journal={Clinical Psychological Science},
   volume={6},
   number={3},
@@ -531,13 +531,13 @@
 
 
 @incollection{Geus1996,
-  title = "Ambulatory assessment of parasympathetic/sympathetic balance by impedance cardiography",
-  author = "{de Geus}, E.J.C. and {van Doornen}, L.J.P.",
-  year = "1996",
-  language = "English",
-  pages = "141--164",
-  booktitle = "Ambulatory Assessment. Computer assisted psychological and psychophysiological methods in monitoring and field studies",
-  publisher = "Hogrefe \& Huber"
+  title = {Ambulatory assessment of parasympathetic/sympathetic balance by impedance cardiography},
+  author = {de Geus, E.J.C. and van Doornen, L.J.P.},
+  year = {1996},
+  language = {English},
+  pages = {141--164},
+  booktitle = {Ambulatory Assessment. Computer assisted psychological and psychophysiological methods in monitoring and field studies},
+  publisher = {Hogrefe \& Huber}
 }
 
 @article{Goertz2018,
@@ -550,7 +550,7 @@
   number = {4},
   pages = {e021745},
   pmid = {29643168},
-  title = {{Fatigue in patients with chronic obstructive pulmonary disease: protocol of the Dutch multicentre, longitudinal, observational {\textless}i{\textgreater}FAntasTIGUE{\textless}/i{\textgreater} study}},
+  title = {{Fatigue in patients with chronic obstructive pulmonary disease: Protocol of the Dutch multicentre, longitudinal, observational {\textless}i{\textgreater}FAntasTIGUE{\textless}/i{\textgreater} study}},
   url = {http://www.ncbi.nlm.nih.gov/pubmed/29643168{\%}0Ahttp://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC5898336{\%}0Ahttp://bmjopen.bmj.com/lookup/doi/10.1136/bmjopen-2018-021745},
   volume = {8},
   year = {2018}
@@ -558,8 +558,8 @@
 
 
 @Article{Green2016,
-    title = {simr: an R package for power analysis of generalised linear mixed models by simulation},
-    author = {Peter Green and Catriona J. MacLeod},
+    title = {simr: An R package for power analysis of generalised linear mixed models by simulation},
+    author = {Green, Peter  and MacLeod, Catriona J },
     journal = {Methods in Ecology and Evolution},
     volume = {7},
     number = {4},
@@ -653,7 +653,7 @@
 }
 
 @article{jongeneel2018,
-  title={Reducing distress and improving social functioning in daily life in people with auditory verbal hallucinations: study protocol for the ‘Temstem’randomised controlled trial},
+  title={Reducing distress and improving social functioning in daily life in people with auditory verbal hallucinations: Study protocol for the ‘Temstem’randomised controlled trial},
   author={Jongeneel, Alyssa and Scheffers, Dorien and Tromp, Nynke and Nuij, Chani and Delespaul, Philippe and Riper, Heleen and Van Der Gaag, Mark and van den Berg, David},
   journal={BMJ open},
   volume={8},
@@ -689,7 +689,7 @@
 }
 
 @article{kirchner2016,
-  title={Spatio-temporal determinants of mental health and well-being: advances in geographically-explicit ecological momentary assessment (GEMA)},
+  title={Spatio-temporal determinants of mental health and well-being: Advances in geographically-explicit ecological momentary assessment (GEMA)},
   author={Kirchner, Thomas R and Shiffman, Saul},
   journal={Social psychiatry and psychiatric epidemiology},
   volume={51},
@@ -732,14 +732,14 @@
   issn = {15347796},
   journal = {Psychosomatic Medicine},
   pmid = {27551988},
-  title = {{Temporal Dynamics of Health and Well-Being: A Crowdsourcing Approach to Momentary Assessments and Automated Generation of Personalized Feedback}},
+  title = {{Temporal dynamics of health and well-being: A crowdsourcing approach to momentary assessments and automated generation of personalized feedback}},
   year = {2017}
 }
 
 
 @Article{Kossakowski2017,
   author          = {Kossakowski, Jolanda J. and Groot, Peter C. and Haslbeck, Jonas M. B. and Borsboom, Denny and Wichers, Marieke},
-  title           = {{Data from ‘Critical Slowing Down as a Personalized Early Warning Signal for Depression'}},
+  title           = {{Data from ‘critical slowing down as a personalized early warning signal for depression'}},
   journal         = {Journal of Open Psychology Data},
   year            = {2017},
   volume          = {5},
@@ -783,7 +783,7 @@
 }
 
 @article{Lindert2018,
-  title={Bright environmental light ameliorates deficient subjective ‘liking’in insomnia: an experience sampling study},
+  title={Bright environmental light ameliorates deficient subjective ‘liking’in insomnia: An experience sampling study},
   author={Te Lindert, Bart HW and Itzhacki, Jacob and van der Meijden, Wisse P and Kringelbach, Morten L and Mendoza, Jorge and Van Someren, Eus JW},
   journal={Sleep},
   volume={41},
@@ -811,7 +811,7 @@
 
 @Article{Marszalek2014,
   author  = {Marszalek, Jolanta and Morgulec-Adamowicz, Natalia and Rutkowska, Izabela and Kosmol, Andrzej and Marszalek, Jolanta and Morgulec-Adamowicz, Natalia and Rutkowska, Izabela and Kosmol, Andrzej},
-  title   = {{Using Ecological Momentary Assessment to Evaluate Current Physical Activity, Using Ecological Momentary Assessment to Evaluate Current Physical Activity}},
+  title   = {{Using ecological momentary assessment to evaluate current physical activity, using ecological momentary assessment to evaluate current physical activity}},
   journal = {BioMed Research International},
   year    = {2014},
   volume  = {2014,},
@@ -871,7 +871,7 @@ year = {1999}
 
 @Article{Moskowitz2006,
   author   = {Moskowitz, Debbie S and Young, Simon N},
-  title    = {{Ecological momentary assessment: what it is and why it is a method of the future in clinical psychopharmacology.}},
+  title    = {{Ecological momentary assessment: What it is and why it is a method of the future in clinical psychopharmacology.}},
   journal  = {Journal of psychiatry {\&} neuroscience : JPN},
   year     = {2006},
   volume   = {31},
@@ -886,7 +886,7 @@ year = {1999}
 
 @Article{Myin-Germeys2016,
   author  = {Myin-Germeys, Inez and Klippel, Annelie and Steinhart, Henrietta and Reininghaus, Ulrich},
-  title   = {{Ecological momentary interventions in psychiatry.}},
+  title   = {{Ecological momentary interventions in psychiatry}},
   journal = {Current opinion in psychiatry},
   year    = {2016},
   volume  = {29},
@@ -949,7 +949,7 @@ year = {1999}
   number = {3},
   pages = {121--40},
   pmid = {18763692},
-  title = {{The Netherlands Study of Depression and Anxiety (NESDA): rationale, objectives and methods.}},
+  title = {{The Netherlands Study of Depression and Anxiety (NESDA): Rationale, objectives and methods.}},
   url = {http://doi.wiley.com/10.1002/mpr.256 http://www.ncbi.nlm.nih.gov/pubmed/18763692},
   volume = {17},
   year = {2008}
@@ -1003,7 +1003,7 @@ year = {1999}
 }
 
 @article{pot2016,
-  title={Effect of virtual reality exposure therapy on social participation in people with a psychotic disorder (VRETp): study protocol for a randomized controlled trial},
+  title={Effect of virtual reality exposure therapy on social participation in people with a psychotic disorder (VRETp): Study protocol for a randomized controlled trial},
   author={Pot-Kolder, Roos and Veling, Wim and Geraets, Chris and van der Gaag, Mark},
   journal={Trials},
   volume={17},
@@ -1014,7 +1014,7 @@ year = {1999}
 }
 
 @article{Roenneberg2003,
-  title={Life between clocks: daily temporal patterns of human chronotypes},
+  title={Life between clocks: aDily temporal patterns of human chronotypes},
   author={Roenneberg, Till and Wirz-Justice, Anna and Merrow, Martha},
   journal={Journal of biological rhythms},
   volume={18},
@@ -1025,7 +1025,7 @@ year = {1999}
 }
 
 @Article{ruf1999,
-  title = {The Lomb-Scargle Periodogram in Biological Rhythm Research: Analysis of Incomplete and Unequally Spaced Time-Series},
+  title = {The Lomb-Scargle periodogram in biological rhythm research: Analysis of incomplete and unequally spaced time-series},
   author = {T. Ruf},
   journal = {Biological Rhythm Research},
   year = {1999},
@@ -1035,7 +1035,7 @@ year = {1999}
 
 @Article{russell1980circumplex,
   author    = {Russell, James A},
-  title     = {A circumplex model of affect.},
+  title     = {A circumplex model of affect},
   journal   = {Journal of personality and social psychology},
   year      = {1980},
   volume    = {39},
@@ -1045,7 +1045,7 @@ year = {1999}
 }
 
 @article{ruwaard2009,
-  title={Standardized web-based cognitive behavioural therapy of mild to moderate depression: a randomized controlled trial with a long-term follow-up},
+  title={Standardized web-based cognitive behavioural therapy of mild to moderate depression: A randomized controlled trial with a long-term follow-up},
   author={Ruwaard, Jeroen and Schrieken, Bart and Schrijver, Menno and Broeksteeg, Janneke and Dekker, Jack and Vermeulen, Hans and Lange, Alfred},
   journal={Cognitive behaviour therapy},
   volume={38},
@@ -1117,7 +1117,7 @@ year = {1999}
 }
 
 @article{sharar2016,
-  title={Circumplex model of affect: a measure of pleasure and arousal during virtual reality distraction analgesia},
+  title={Circumplex model of affect: A measure of pleasure and arousal during virtual reality distraction analgesia},
   author={Sharar, Sam R and Alamdari, Ava and Hoffer, Christine and Hoffman, Hunter G and Jensen, Mark P and Patterson, David R},
   journal={Games for health journal},
   volume={5},
@@ -1144,7 +1144,7 @@ year = {1999}
 
 @Article{Shiffman2009,
   author          = {Shiffman, Saul},
-  title           = {{Ecological momentary assessment (EMA) in studies of substance use.}},
+  title           = {{Ecological momentary assessment (EMA) in studies of substance use}},
   journal         = {Psychological Assessment},
   year            = {2009},
   volume          = {21},
@@ -1158,7 +1158,7 @@ year = {1999}
 
 @Article{Smyth2003,
   author  = {Smyth, Joshua M. and Stone, Arthur A.},
-  title   = {Ecological Momentary Assessment Research in Behavioral medicine},
+  title   = {Ecological momentary assessment research in behavioral medicine},
   journal = {Journal of Happiness Studies},
   year    = {2003},
   volume  = {4},
@@ -1212,7 +1212,7 @@ year = {1999}
 
 @Article{Telford2012,
   author    = {Telford, C. and McCarthy-Jones, S. and Corcoran, R. and Rowse, G.},
-  title     = {Experience Sampling Methodology studies of depression: the state of the art},
+  title     = {Experience Sampling Methodology studies of depression: The state of the art},
   journal   = {Psychological Medicine},
   year      = {2012},
   volume    = {42},
@@ -1238,7 +1238,7 @@ year = {1999}
 
 @Article{VanBallegooijen2016,
   author    = {van Ballegooijen, Wouter and Ruwaard, Jeroen and Karyotaki, Eirini and Ebert, David D. and Smit, Johannes H. and Riper, Heleen},
-  title     = {{Reactivity to smartphone-based ecological momentary assessment of depressive symptoms (MoodMonitor): protocol of a randomised controlled trial}},
+  title     = {{Reactivity to smartphone-based ecological momentary assessment of depressive symptoms (MoodMonitor): Protocol of a randomised controlled trial}},
   journal   = {BMC Psychiatry},
   year      = {2016},
   volume    = {16},
@@ -1254,16 +1254,16 @@ year = {1999}
 
 
 @Article{VanderKrieke2015,
-  author = "van der Krieke, Lian and Emerencia, C. Ando and Bos, H. Elisabeth and Rosmalen, GM Judith and Riese, Harri{\"e}tte and Aiello, Marco and Sytema, Sjoerd and de Jonge, Peter", 
-  title = "Ecological Momentary Assessments and Automated Time Series Analysis to Promote Tailored Health Care: A Proof-of-Principle Study",
-  journal = "JMIR Research Protocols",
-  year = "2015",
-  month = "Aug",
-  day = "07",
-  volume = "4",
-  number = "3",
-  pages = "e100",
-  doi = "10.2196/resprot.4000"
+  author = {van der Krieke, Lian and Emerencia, C. Ando and Bos, H. Elisabeth and Rosmalen, GM Judith and Riese, Harri{\"e}tte and Aiello, Marco and Sytema, Sjoerd and de Jonge, Peter}, 
+  title = {Ecological Momentary Assessments and Automated Time Series Analysis to Promote Tailored Health Care: A Proof-of-Principle Study},
+  journal = {JMIR Research Protocols},
+  year = {2015},
+  month = {Aug},
+  day = {07},
+  volume = {4},
+  number = {3},
+  pages = {e100},
+  doi = {10.2196/resprot.4000}
 }
 
 @Article{VandeLeemput2014,
@@ -1299,14 +1299,14 @@ year = {1999}
   number = {10},
   pages = {1--5},
   pmid = {23056456},
-  title = {{Can a One-Item Mood Scale Do the Trick? Predicting Relapse over 5-Years in Recurrent Depression}},
+  title = {{Can a one-item mood scale do the trick? Predicting relapse over 5-years in recurrent depression}},
   volume = {7},
   year = {2012}
 }
 
 @article{VanHeest2014,
-  title = {Autocalibration of accelerometer data for free-living physical activity assessment using local gravity and temperature: an evaluation on four continents},
-  author = {Vincent T {van Hees} and Zhou Fang and Joss Langford and Felix Assah and A MohammadMirkes and Inacio C {da Silva} and Michael I Trenell and Tom White and Nicholas J Wareham and Soren Brage},
+  title = {Autocalibration of accelerometer data for free-living physical activity assessment using local gravity and temperature: An evaluation on four continents},
+  author = {van Hees, Vincent T and  Fang, Zhou and  Langford, Joss and  Assah,Felix and Mohammad, A and da Silva, Inacio C and  Trenell, Michael I and  White, Tom and  Wareham, Nicholas J and  Brage, Soren},
   doi = {10.1152/japplphysiol.00421.2014},
   journal = {Journal of Applied Physiology},
   volume = {117},
@@ -1317,8 +1317,8 @@ year = {1999}
 }
 
 @article{VanHeest2015,
-  title = {A Novel, Open Access Method to Assess Sleep Duration Using a Wrist-Worn Accelerometer},
-  author = {Vincent T {van Hees} and Severine Sabia and Kirstie N Anderson and Sarah J Denton and James Oliver and Michael Catt and Jesica G Abell and Mika Kivimaki and Michael I Trenell and Archana Singh-Manoux},
+  title = {A novel, open access method to assess sleep duration using a wrist-worn accelerometer},
+  author = {van Hees, Vincent T and  Sabia, Severine and Anderson, Kirstie N  and  Denton, Sarah J and  Oliver, James and  Catt, Michael and  Abell, Jesica G and  Kivimaki, Mika and  Trenell, Michael I and  Singh-Manoux, Archana},
   doi = {10.1371/journal.pone.0142533},
   journal = {PLoS One},
   volume = {10},
@@ -1346,7 +1346,7 @@ year = {1999}
 }
 
 @article{Versluis2016,
-  title={Changing mental health and positive psychological well-being using ecological momentary interventions: a systematic review and meta-analysis},
+  title={Changing mental health and positive psychological well-being using ecological momentary interventions: A systematic review and meta-analysis},
   author={Versluis, Anke and Verkuil, Bart and Spinhoven, Philip and van der Ploeg, Melanie M and Brosschot, Jos F},
   journal={Journal of medical Internet research},
   volume={18},
@@ -1357,7 +1357,7 @@ year = {1999}
 
 @Book{Venables2002,
     title = {Modern Applied Statistics with S},
-    author = {W. N. Venables and B. D. Ripley},
+    author = {Venables, W. N.  and  Ripley, B. D.},
     publisher = {Springer},
     edition = {Fourth},
     address = {New York},
@@ -1385,7 +1385,7 @@ year = {1999}
   pages = {1063--1070},
   pmid = {3397865},
   journal = {Journal of Personality and Social Psychology},
-  title = {{Development and Validation of Brief Measures of Positive and Negative Affect :   The PANAS Scales}},
+  title = {{Development and validation of brief measures of Positive and Negative Affect :   The PANAS scales}},
   doi = {10.1037/0022-3514.54.6.1063},
   volume = {54},
   year = {1988}
@@ -1419,7 +1419,7 @@ year = {1999}
 
 @book{Watson1999,
   author = {Watson, David and Clark, Lee Anna},
-  title = {{The PANAS-X : Manual for the Positive and Negative Affect Schedule - Expanded Form}},
+  title = {{The PANAS-X : Manual for the Positive and Negative Affect Schedule - expanded Form}},
   publisher = {University of Iowa},
   location = {Iowa},
   url = {https://pdfs.semanticscholar.org/9e15/83dd26e0741e2bf74112405e97d948170128.pdf},
@@ -1458,7 +1458,7 @@ year = {1999}
 
 @Article{Wichers2016,
   author  = {Wichers, Marieke and Groot, Peter C. and Psychosystems and ESM and EWS},
-  title   = {{Critical Slowing Down as a Personalized Early Warning Signal for Depression}},
+  title   = {{Critical slowing down as a personalized early warning signal for depression}},
   journal = {Psychotherapy and Psychosomatics},
   year    = {2016},
   volume  = {85},
@@ -1470,7 +1470,7 @@ year = {1999}
 
 @Article{Wichers2012,
   author    = {Wichers, Marieke and Peeters, Frenk and Rutten, Bart P. F. and Jacobs, Nele and Derom, Catherine and Thiery, Evert and Delespaul, Philippe and van Os, Jim},
-  title     = {{A time-lagged momentary assessment study on daily life physical activity and affect.}},
+  title     = {{A time-lagged momentary assessment study on daily life physical activity and affect}},
   journal   = {Health Psychology},
   year      = {2012},
   volume    = {31},
@@ -1486,7 +1486,7 @@ year = {1999}
 
 
 @book{wickham2016ggplot2,
-  title = {ggplot2: elegant graphics for data analysis},
+  title = {ggplot2: Elegant graphics for data analysis},
   author = {Wickham, Hadley},
   year = {2016},
   publisher = {Springer},
@@ -1494,7 +1494,7 @@ year = {1999}
 }
 
 @book{wickham2016r,
-  title={R for data science: import, tidy, transform, visualize, and model data},
+  title={R for data science: Import, tidy, transform, visualize, and model data},
   author={Wickham, Hadley and Grolemund, Garrett},
   year={2016},
   publisher={" O'Reilly Media, Inc."}
